syntax = "proto3";

package account.v1;

// Account role enum
enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_USER = 1;
  ROLE_ADMIN = 2;
}

// Account user message
message GetAccountResponse {
  int64 id = 1;
  string username = 2;
  string email = 3;
  Role role = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

// Get account request
message GetAccountRequest {
  optional int64 id = 1;
  optional string username = 2;
  optional string email = 3;
}

// Login request
message LoginRequest {
  optional int64 id = 1;
  optional string username = 2;
  optional string email = 3;
  string password = 4;
}

// Login response
message LoginResponse {
  string token = 1;
  GetAccountResponse account = 2;
}

// Register request
message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

// Register response
message RegisterResponse {
  string token = 1;
  GetAccountResponse account = 2;
}

// Account service definition
service AccountService {
  // Get account by ID, username, or email
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {}

  // Login user
  rpc Login(LoginRequest) returns (LoginResponse) {}

  // Register new user
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
}
